@@ -1,3 +1,7 @@
+2005-09-15  Tom Tromey  <tromey@redhat.com>
+
+	* java/lang/EnumConstantNotPresentException.java: New file.
+
 2005-09-07  Lillian Angel  <langel@redhat.com>
 
 	* javax/swing/SpringLayout.java:
